--- a/Suggestunes/src/app/playlist/playlist.component.html
+++ b/Suggestunes/src/app/playlist/playlist.component.html
@@ -1,1 +1,7 @@
-<p>playlist works!</p>
+<div class="header container-fluid">
+    <img src="assets/music note img.png" class="music-img rounded float-start">
+    <div class="title container">
+        <h1 class="playlist-title"></h1>
+        <a class="playlist-description"></a>
+    </div>
+</div>
