Finished the header for the playlist page.
The color will still need to change.

--- a/Suggestunes/src/app/playlist/playlist.component.html
+++ b/Suggestunes/src/app/playlist/playlist.component.html
@@ -1,7 +1,7 @@
 <div class="header container-fluid">
     <img src="assets/music note img.png" class="music-img rounded float-start">
     <div class="title container">
-        <h1 class="playlist-title"></h1>
-        <a class="playlist-description"></a>
+        <h1 class="playlist-title">Playlist Title</h1>
+        <h2 class="playlist-description">Playlist description</h2>
     </div>
 </div>
