Worked on the header for playlists page

--- a/Suggestunes/src/app/playlists/playlist/playlist.component.html
+++ b/Suggestunes/src/app/playlists/playlist/playlist.component.html
@@ -1,1 +1,13 @@
-
+<div class="header container-fluid">
+    <img alt = "" src="assets/music note img.png" class="music-img rounded float-start">
+    <div class="title container">
+        <h1 class="playlist-title">Playlist Title</h1>
+        <h2 class="playlist-description">Playlist description</h2>
+    </div>
+</div>
+<div class="body container-fluid">
+    <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">Add Songs</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Search">
+      </div>
+</div>
