--- a/Suggestunes/src/app/landing-page/homepage-footer/homepage-footer.component.html
+++ b/Suggestunes/src/app/landing-page/homepage-footer/homepage-footer.component.html
@@ -1,1 +1,11 @@
-<p>homepage-footer works!</p>
+<div class="d-flex flex-row align-items-center">
+        <div class="card p-2" style="width: 18rem">
+            <div class="card-title"> SuggesTunes
+            </div>
+            <div class="card-body">
+                <p class="card-text"> Subscribe to our newsletter that doesn't exist</p>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-primary">Subscribe</a>
+            </div>
+        </div>  
+        <p class="card-text p-2">Footer text :p</p>    
+    </div>
