--- a/Suggestunes/src/app/landing-page/login-signup/login-signup.component.html
+++ b/Suggestunes/src/app/landing-page/login-signup/login-signup.component.html
@@ -1,1 +1,8 @@
-<p>login-signup works!</p>
+<div class="card" style = "text-align: center; background-color: rgb(47, 47, 47); border-radius: 0%;">
+  <div class="card-body">
+    <h5 class="card-title" style="color: white; font-size:xx-large;">Log in or Sign up</h5>
+    <p class="card-text" style="color: white;">Welcome back. Don't already have an account? Sign up with your email below.</p>
+    <a href="#" class="btn btn-logSign" style="margin-right: 5px">Log in</a>
+    <a href="#" class="btn btn-logSign" style="margin-left: 5px">Sign up</a>
+  </div>
+</div>
