Continued work on Landing page footer

--- a/Suggestunes/src/app/landing-page/homepage-footer/homepage-footer.component.html
+++ b/Suggestunes/src/app/landing-page/homepage-footer/homepage-footer.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-row align-items-center">
-        <div class="card p-2" style="width: 18rem">
+        <div class="footer-card p-2">
             <div class="card-title"> SuggesTunes
             </div>
             <div class="card-body">
@@ -7,5 +7,17 @@
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-primary">Subscribe</a>
             </div>
         </div>  
-        <p class="card-text p-2">Footer text :p</p>    
+
+        <div class="footer-card p-2">
+            <div class="card-body">
+                <p class="footer-text"> Some important footer text will go here</p>
+                <p class="footer-text">maybe even a link</p>
+            </div>
+        </div>  
+
+        <div class="footer-card p-2">
+            <div class="card-body">
+                <p class="footer-text"> A third column of things</p>
+            </div>
+        </div>  
     </div>
