finished create playlist button and modal

--- a/Suggestunes/src/app/playlists/create-playlist/create-playlist.component.html
+++ b/Suggestunes/src/app/playlists/create-playlist/create-playlist.component.html
@@ -1,2 +1,2 @@
-<button type="button" data-bs-toggle="modal" data-bs-target="#createPlaylistModal">Launch modal</button>
+<button class="btn" type="button" data-bs-toggle="modal" data-bs-target="#createPlaylistModal">Create Playlist</button>
 <app-create-playlist-modal></app-create-playlist-modal>
