--- a/Suggestunes/src/app/playlists/create-playlist/create-playlist-modal/create-playlist-modal.component.html
+++ b/Suggestunes/src/app/playlists/create-playlist/create-playlist-modal/create-playlist-modal.component.html
@@ -1,25 +1,30 @@
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" data-bs-backdrop = "static" id="createPlaylistModal" tabindex="-1" aria-labelledby="createPlaylistModal" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New message</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <h5 class="modal-title" id="exampleModalLabel">Create New Playlist</h5>
       </div>
       <div class="modal-body">
-        <form>
+        <form id="form">
+          <div class = "d-flex">
+            <div class="input-group">
+              <label for = "fileInput"><img  src = "{{imageUrl.value}}"></label>
+              <input type="file" src = "{{imageUrl.value}}" class="form-control" id="fileInput" (change) = (updateImageUrl($event)) accept = "image/*" aria-describedby="inputGroupFileAddon04" aria-label="Upload Image" [formControl] = "imageUrl">
+            </div>
+            <div class="mb-3">
+              <label for="playlist-name" class="col-form-label">Name:</label>
+              <input type="text" class="form-control" id="playlist-name">
+            </div>
+      </div>
           <div class="mb-3">
-            <label for="recipient-name" class="col-form-label">Recipient:</label>
-            <input type="text" class="form-control" id="recipient-name">
-          </div>
-          <div class="mb-3">
-            <label for="message-text" class="col-form-label">Message:</label>
-            <textarea class="form-control" id="message-text"></textarea>
+            <label for="playlist-description" class="col-form-label">Description:</label>
+            <textarea class="form-control" id="playlist-description"></textarea>
           </div>
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
+        <button type="button" class="btn btn-secondary" (click)="clear($event)" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary">Create Playlist</button>
       </div>
     </div>
   </div>
