--- a/Suggestunes/src/styles.css
+++ b/Suggestunes/src/styles.css
@@ -1,1 +1,6 @@
 @import "~bootstrap/dist/css/bootstrap.css";
+@import url('https://fonts.cdnfonts.com/css/uni-sans-regular');
+body{
+  color: white!important;
+  font-family: 'Uni Sans Demo', sans-serif;
+}
