Created Cards for Profile Page
Toyed with the idea of displaying playlists on the profile page

--- a/Suggestunes/src/app/app.component.html
+++ b/Suggestunes/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div style="display: inline-block">
-    <div *ngFor = "let item of cards">
+<div>
+    <div style="display: inline-block" *ngFor = "let item of cards">
         <app-card img = {{item.img}} description = {{item.description}} imgDescription={{item.imgDescription}}></app-card>
     </div>
 </div>
