--- a/Suggestunes/src/app/card/card.component.html
+++ b/Suggestunes/src/app/card/card.component.html
@@ -1,7 +1,7 @@
 <div class="card" style="width: 18rem; display: inline-block">
     <img class="card-img-top" src={{img}} alt="">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">{{imgDescription}}</h5>
       <p class="card-text">{{description}}</p>
       <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
     </div>
