--- a/Suggestunes/src/app/card/card.component.css
+++ b/Suggestunes/src/app/card/card.component.css
@@ -3,14 +3,19 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s; 
     position: relative;
-    top: 383px;
-    left: 607px;
+    top: 320px;
+    left: 450px;
+    margin: 10px; 
+    border: 5px solid #66318D;
   }
-
-  
-  /* Add some padding inside the card container */
-  .container {
-    padding: 2px 16px;
-
+  .card-img-top {
+    width: 100%;
+    object-fit: cover;
 }
+  .card-text{
+    text-align: center;
+  }
+  .card-title{
+    text-align: center;
+  }
   
