--- a/Suggestunes/src/app/layouts/landing-page/landing-page.component.html
+++ b/Suggestunes/src/app/layouts/landing-page/landing-page.component.html
@@ -1,5 +1,7 @@
-<app-landing-navbar></app-landing-navbar>
-<app-info-card></app-info-card>
-<app-login-signup></app-login-signup>
-<app-stats-carousel></app-stats-carousel>
-<app-homepage-footer></app-homepage-footer>
+<div style="background-color: #1E1E1E; color: white">
+    <app-landing-navbar> loading ... </app-landing-navbar>
+    <app-login-signup> loading ... </app-login-signup>
+    <app-stats-carousel> loading ... </app-stats-carousel>
+    <app-info-card> loading ... </app-info-card>
+    <app-homepage-footer> loading ... </app-homepage-footer>
+</div>
