--- a/Suggestunes/src/app/landing-page/stats-carousel/stats-carousel.component.html
+++ b/Suggestunes/src/app/landing-page/stats-carousel/stats-carousel.component.html
@@ -1,1 +1,51 @@
-<p>stats-carousel works!</p>
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner" style="height:400px">
+    <div class="carousel-item active">
+      <div class="d-flex justify-content-center">
+        <p>Top Artists This week</p>
+        <ul>
+          <li>Test1</li>
+          <li>Test1</li>
+          <li>Test1</li>
+        </ul>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center">
+          <h1>Top Songs This week</h1>
+          <ul>
+            <li>Test1</li>
+            <li>Test1</li>
+            <li>Test1</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center">
+          <h1>Top Genres This week</h1>
+          <ul>
+            <li>Test1</li>
+            <li>Test1</li>
+            <li>Test1</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
