Finalized Landing page footer and Login/Signup card

--- a/Suggestunes/src/app/landing-page/login-signup/login-signup.component.css
+++ b/Suggestunes/src/app/landing-page/login-signup/login-signup.component.css
@@ -1,4 +1,4 @@
 .btn-logSign {
-    background-color: blueviolet;
-    color: rgb(212, 182, 240),;   
+    background-color: #66318D;
+    color: white;   
 }
