--- a/Suggestunes/src/app/landing-page/homepage-footer/homepage-footer.component.css
+++ b/Suggestunes/src/app/landing-page/homepage-footer/homepage-footer.component.css
@@ -1,9 +1,10 @@
 .footer-card{
-    width: 20 rem;
+    width: 40 rem;
     height: 10 rem;
 
 }
 
 .footer-text{
     text-align: center;
+    color: #888888
 }
