--- a/Suggestunes/src/app/landing-page/homepage-footer/homepage-footer.component.html
+++ b/Suggestunes/src/app/landing-page/homepage-footer/homepage-footer.component.html
@@ -1,23 +1,23 @@
-<div class="d-flex flex-row align-items-center">
-        <div class="footer-card p-2">
-            <div class="card-title"> SuggesTunes
+<div class="d-flex flex-row align-items-center border-subtle border-top border-secondary" style="border-color: #4b4b4b;">
+        <div class="footer-card p-2 flex-fill">
+            <div class="card-title footer-text" style="text-align: center;"> SuggesTunes
             </div>
-            <div class="card-body">
-                <p class="card-text"> Subscribe to our newsletter that doesn't exist</p>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-primary">Subscribe</a>
-            </div>
-        </div>  
-
-        <div class="footer-card p-2">
-            <div class="card-body">
-                <p class="footer-text"> Some important footer text will go here</p>
-                <p class="footer-text">maybe even a link</p>
+            <div class="card-body" style="text-align: center;">
+                <p class="card-text footer-text"> Subscribe to our newsletter that doesn't exist</p>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-primary" style="background-color: #66318D; border:#66318D;">Subscribe</a>
             </div>
         </div>  
 
-        <div class="footer-card p-2">
+        <div class="footer-card p-2 flex-fill">
             <div class="card-body">
-                <p class="footer-text"> A third column of things</p>
+                <p class="footer-text"> Copyright: ©We don't have one</p>
+            </div>
+        </div>  
+
+        <div class="footer-card p-2 flex-fill">
+            <div class="card-body">
+                <p class="footer-text">Contact us:</p>
+                <p class="footer-text">jam00056@mix.wvu.edu</p>
             </div>
         </div>  
     </div>
