--- a/Suggestunes/src/app/login-box-component/login-box-component.component.html
+++ b/Suggestunes/src/app/login-box-component/login-box-component.component.html
@@ -1,26 +1,28 @@
 <div class="loginBox flex container">
-    <div style = "padding: 20px;">
-        <h3 class="loginHeader">LOGIN</h3>
-        <form class="loginForm">
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label><br>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label><br>
-                <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div style="text-align: center; padding-top: 10px;">
-                <button type="submit" class="btn btn-primary">Log in</button>
-            </div>
-        </form>
-        <p style="padding: 10px; margin: 0;">
-            <a class="link" href="forgotPassword">Forgot my password</a>
+    <div class="bigFlex flex container">
+        <div style="padding: 20px;">
+            <h3 class="loginHeader">LOGIN</h3>
+            <form class="loginForm">
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Email address</label><br>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Password</label><br>
+                    <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div style="text-align: center; padding-top: 10px;">
+                    <button type="submit" class="btn btn-primary">Log in</button>
+                </div>
+            </form>
+            <p style="padding: 10px; margin: 0;">
+                <a class="link" href="forgotPassword">Forgot my password</a>
+            </p>
+        </div>
+    </div>
+    <div class="signupBox flex container">
+        <p style="padding: 10px 30px; margin: 0; color: white;">Don't have an account?<br>
+            <a class="link" href="register">Sign up</a>
         </p>
     </div>
-</div>
-<div class="signupBox flex container">
-    <p style="padding: 10px 30px; margin: 0; color: white">Don't have an account?<br>
-        <a class="link" href="signUpPage">Sign up</a>
-    </p>
 </div>
