--- a/Suggestunes/src/app/card/card.component.css
+++ b/Suggestunes/src/app/card/card.component.css
@@ -6,7 +6,7 @@
     top: 320px;
     left: 450px;
     margin: 10px; 
-    border: 5px solid #66318D;
+    border: 5px solid #3E2149;
   }
   .card-img-top {
     width: 100%;
