Landing Page 80% done

--- a/Suggestunes/src/app/landing-page/stats-carousel/stats-carousel.component.html
+++ b/Suggestunes/src/app/landing-page/stats-carousel/stats-carousel.component.html
@@ -1,44 +1,51 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide d-flex justify-content-center" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
-  <div class="carousel-inner" style="height:400px">
+  <div class="carousel-inner" style="height:500px; width:700px">
     <div class="carousel-item active">
       <div class="d-flex justify-content-center">
-        <p>Top Artists This week</p>
-        <ul>
-          <li>Test1</li>
-          <li>Test1</li>
-          <li>Test1</li>
+        <ul class="list-group list-group-flush" style="width: 500px; padding-top: 100px">
+          <li class="list-group-item statItem">
+            <h1>Top Songs This Week</h1>
+          </li>
+          <li class="list-group-item statItem">Song 1</li>
+          <li class="list-group-item statItem">Song 2</li>
+          <li class="list-group-item statItem">Song 3</li>
+          <li class="list-group-item statItem">Song 4</li>
+          <li class="list-group-item statItem">Song 5</li>
         </ul>
       </div>
     </div>
     <div class="carousel-item">
       <div class="d-flex justify-content-center">
-        <div class="d-flex justify-content-center">
-          <h1>Top Songs This week</h1>
-          <ul>
-            <li>Test1</li>
-            <li>Test1</li>
-            <li>Test1</li>
-          </ul>
-        </div>
+        <ul class="list-group list-group-flush" style="width: 500px; padding-top: 100px">
+          <li class="list-group-item statItem">
+            <h1>Top Genres This Week</h1>
+          </li>
+          <li class="list-group-item statItem">Genre 1</li>
+          <li class="list-group-item statItem">Genre 2</li>
+          <li class="list-group-item statItem">Genre 3</li>
+          <li class="list-group-item statItem">Genre 4</li>
+          <li class="list-group-item statItem">Genre 5</li>
+        </ul>
       </div>
     </div>
     <div class="carousel-item">
       <div class="d-flex justify-content-center">
-        <div class="d-flex justify-content-center">
-          <h1>Top Genres This week</h1>
-          <ul>
-            <li>Test1</li>
-            <li>Test1</li>
-            <li>Test1</li>
-          </ul>
-        </div>
+        <ul class="list-group list-group-flush" style="width: 500px; padding-top: 100px">
+          <li class="list-group-item statItem">
+            <h1>Top Artists This Week</h1>
+          </li>
+          <li class="list-group-item statItem">Artist 1</li>
+          <li class="list-group-item statItem">Artist 2</li>
+          <li class="list-group-item statItem">Artist 3</li>
+          <li class="list-group-item statItem">Artist 4</li>
+          <li class="list-group-item statItem">Artist 5</li>
+        </ul>
       </div>
-    </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
