--- a/Suggestunes/src/app/layouts/landing-page/landing-page.component.html
+++ b/Suggestunes/src/app/layouts/landing-page/landing-page.component.html
@@ -2,6 +2,6 @@
     <app-landing-navbar> loading ... </app-landing-navbar>
     <app-login-signup> loading ... </app-login-signup>
     <app-stats-carousel> loading ... </app-stats-carousel>
-    <app-info-card> loading ... </app-info-card>
+    <!-- <app-info-card> loading ... </app-info-card> -->
     <app-homepage-footer> loading ... </app-homepage-footer>
 </div>
