Signup Page Sizing
Finished relative sizing, signup page and login pages should be complete besides some small tweaking

--- a/Suggestunes/src/app/register-box-component/register-box-component.component.css
+++ b/Suggestunes/src/app/register-box-component/register-box-component.component.css
@@ -50,7 +50,7 @@
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    top: 525px;
+    top: 74%;
     background-color: #333333;
     border-radius: 10px;
     width: 232.8px;
