--- a/Suggestunes/src/app/register-box-component/register-box-component.component.html
+++ b/Suggestunes/src/app/register-box-component/register-box-component.component.html
@@ -1,3 +1,4 @@
+<div class="flex container">
 <div class="loginBox flex container">
     <div style = "padding: 20px;">
         <h3 class="loginHeader">REGISTER</h3>
@@ -20,4 +21,5 @@
     <p style="padding: 10px 30px; margin: 0; color: white">Already have an account?<br>
         <a class="link" href="">Log In</a>
     </p>
+</div>
 </div>
