--- a/Suggestunes/src/app/playlists/create-playlist/create-playlist-modal/create-playlist-modal.component.html
+++ b/Suggestunes/src/app/playlists/create-playlist/create-playlist-modal/create-playlist-modal.component.html
@@ -23,8 +23,8 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="clear($event)" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary">Create Playlist</button>
+        <button type="button" class="btn" (click)="clear($event)" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn">Create Playlist</button>
       </div>
     </div>
   </div>
