--- a/Suggestunes/src/app/landing-page/stats-carousel/stats-carousel.component.html
+++ b/Suggestunes/src/app/landing-page/stats-carousel/stats-carousel.component.html
@@ -1,13 +1,13 @@
-<div id="carouselExampleIndicators" class="carousel slide d-flex justify-content-center" data-bs-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide d-flex justify-content-center" data-bs-ride="carousel" style="padding-bottom:100px">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
-  <div class="carousel-inner" style="height:500px; width:700px">
+  <div class="carousel-inner" style="height:400px; width:700px">
     <div class="carousel-item active">
       <div class="d-flex justify-content-center">
-        <ul class="list-group list-group-flush" style="width: 500px; padding-top: 100px">
+        <ul class="list-group list-group-flush" style="width: 500px">
           <li class="list-group-item statItem">
             <h1>Top Songs This Week</h1>
           </li>
@@ -21,7 +21,7 @@
     </div>
     <div class="carousel-item">
       <div class="d-flex justify-content-center">
-        <ul class="list-group list-group-flush" style="width: 500px; padding-top: 100px">
+        <ul class="list-group list-group-flush" style="width: 500px">
           <li class="list-group-item statItem">
             <h1>Top Genres This Week</h1>
           </li>
@@ -35,7 +35,7 @@
     </div>
     <div class="carousel-item">
       <div class="d-flex justify-content-center">
-        <ul class="list-group list-group-flush" style="width: 500px; padding-top: 100px">
+        <ul class="list-group list-group-flush" style="width: 500px">
           <li class="list-group-item statItem">
             <h1>Top Artists This Week</h1>
           </li>
