--- a/Suggestunes/src/styles.css
+++ b/Suggestunes/src/styles.css
@@ -2,5 +2,6 @@
 @import url('https://fonts.cdnfonts.com/css/uni-sans-regular');
 body{
   color: white!important;
+  background-color: #1E1E1E;
   font-family: 'Uni Sans Demo', sans-serif;
 }
