--- a/Suggestunes/src/app/landing-page/homepage-footer/homepage-footer.component.html
+++ b/Suggestunes/src/app/landing-page/homepage-footer/homepage-footer.component.html
@@ -6,18 +6,17 @@
                 <p class="card-text footer-text"> Subscribe to our newsletter that doesn't exist</p>
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-primary" style="background-color: #66318D; border:#66318D;">Subscribe</a>
             </div>
-        </div>  
+        </div>
 
         <div class="footer-card p-2 flex-fill">
             <div class="card-body">
                 <p class="footer-text"> Copyright: ©We don't have one</p>
             </div>
-        </div>  
+        </div>
 
         <div class="footer-card p-2 flex-fill">
             <div class="card-body">
-                <p class="footer-text">Contact us:</p>
-                <p class="footer-text">jam00056@mix.wvu.edu</p>
+              <a href="mailto:jam00056@mix.wvu.edu" class="btn btn-primary" style="background-color: #66318D; border:#66318D;">Contact Us</a>
             </div>
-        </div>  
+        </div>
     </div>
