--- a/Suggestunes/src/app/landing-page/landing-navbar/landing-navbar.component.html
+++ b/Suggestunes/src/app/landing-page/landing-navbar/landing-navbar.component.html
@@ -5,8 +5,8 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         </ul>
         <form class="d-flex">
-            <a href="#" class="btn nav-button" style="margin-right: 5px;">Log in</a>
-            <a href="#" class="btn nav-button" style="margin-left: 5px">Sign up</a>
+            <a href="/signin" class="btn nav-button" style="margin-right: 5px;">Log in</a>
+            <a href="/register" class="btn nav-button" style="margin-left: 5px">Sign up</a>
         </form>
     </div>
   </nav>
