--- a/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.html
+++ b/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.html
@@ -1,41 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-  <nav class="navbar navbar-expand bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <a class="navbar-brand logo" href="#">Suggestunes</a>
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-              <a href="#" class="btn nav-button" style="margin-right: 5px;">Log in</a>
-              <a href="#" class="btn nav-button" style="margin-left: 5px">Sign up</a>
-          </form>
-        </div>
-      </div>
-    </nav>
+<div class = "site-nav">
+  <div class = "nav-content">
+      <a class = "nav-item" href = "#"><h3 class = "logo">Suggestunes</h3></a>
+      <div class = "nav-item" style = "width: 10px;"></div>
+      <a class = "nav-item" href = "#"><h5 class = "nav-button">Songs</h5></a>
+      <a class = "nav-item" href = "#"><h5 class = "nav-button">Playlists</h5></a>
+      <a class = "nav-item" href = "#"><h5 class = "nav-button">Discover</h5></a>
+      <a class = "nav-item" href = "AccountLayout" style = "float: right; margin-top: 15px; margin-right: 25px;"><img src = "https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" style="border-radius: 50%;" height = "32px" width = "32px"></a>
+      <h5 class = "nav-item" style = "float: right;">{{username}}</h5>
+  </div>
+</div>
