--- a/Suggestunes/src/app/login-box-component/login-box-component.component.html
+++ b/Suggestunes/src/app/login-box-component/login-box-component.component.html
@@ -1,5 +1,5 @@
-<div class="loginBox flex container">
-    <div class="bigFlex flex container">
+<div class="loginBox d-flex flex-wrap flex-column align-content-center justify-content-center">
+    <div class=" d-flex p-2 bigFlex">
         <div style="padding: 20px;">
             <h3 class="loginHeader">LOGIN</h3>
             <form class="loginForm">
@@ -20,9 +20,9 @@
             </p>
         </div>
     </div>
-    <div class="signupBox flex container">
+    <div class="signupBox p-2">
         <p style="padding: 10px 30px; margin: 0; color: white;">Don't have an account?<br>
-            <a class="link" href="register">Sign up</a>
+            <a class="link" href="/register">Sign up</a>
         </p>
     </div>
 </div>
