--- a/Suggestunes/src/app/register-box-component/register-box-component.component.css
+++ b/Suggestunes/src/app/register-box-component/register-box-component.component.css
@@ -1,18 +1,14 @@
 .loginBox{
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
     background-color: #333333;
     border-radius: 10px;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top: 5%
     /* box-shadow: 1px 1px 5px 1px #66318D; */
 }
 
 .loginHeader{
     padding: 10px;
-    margin: 0;
     color: white;
 }
 
@@ -46,12 +42,10 @@
 }
 
 .signupBox{
-    position: absolute;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    top: 74%;
     background-color: #333333;
     border-radius: 10px;
-    width: 232.8px;
+  margin-top:1%;;
+  margin-left:auto;
+  margin-right:auto;
+  width:fit-content;
 }
