--- a/Suggestunes/src/app/register-box-component/register-box-component.component.html
+++ b/Suggestunes/src/app/register-box-component/register-box-component.component.html
@@ -1,5 +1,5 @@
-<div class="flex container">
-<div class="loginBox flex container">
+<div class="d-flex flex-column justify-content-center">
+<div class="loginBox d-flex ">
     <div style = "padding: 20px;">
         <h3 class="loginHeader">REGISTER</h3>
         <form class="loginForm">
@@ -17,9 +17,9 @@
         </form>
     </div>
 </div>
-<div class="signupBox flex container">
-    <p style="padding: 10px 30px; margin: 0; color: white">Already have an account?<br>
-        <a class="link" href="">Log In</a>
+<div class="signupBox d-flex container">
+    <p style="padding: 10px 10px; margin: 0; color: white">Already have an account?<br>
+        <a class="link" href="/signin">Log In</a>
     </p>
 </div>
 </div>
