got ready for demo

--- a/Suggestunes/src/app/register-box-component/register-box-component.component.html
+++ b/Suggestunes/src/app/register-box-component/register-box-component.component.html
@@ -12,7 +12,7 @@
                 <input type="password" class="form-control" id="exampleInputPassword1">
             </div>
             <div style="text-align: center; padding-top: 10px;">
-                <button type="submit" class="btn btn-primary">Register</button>
+                <a href="account" type="submit" role="button" class="btn btn-primary">Register</a>
             </div>
         </form>
     </div>
