--- a/Suggestunes/src/app/login-box-component/login-box-component.component.html
+++ b/Suggestunes/src/app/login-box-component/login-box-component.component.html
@@ -12,7 +12,7 @@
                     <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
                 <div style="text-align: center; padding-top: 10px;">
-                    <button type="submit" class="btn btn-primary">Log in</button>
+                    <a href="/account" role="button" class="btn btn-primary">Log in</a>
                 </div>
             </form>
             <p style="padding: 10px; margin: 0;">
