Login and Signup Done

--- a/Suggestunes/src/app/login-box-component/login-box-component.component.css
+++ b/Suggestunes/src/app/login-box-component/login-box-component.component.css
@@ -1,16 +1,10 @@
-.loginBox{
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    /* box-shadow: 1px 1px 5px 1px #66318D; */
-}
-
-.bigFlex {
-        background-color: #333333;
+.loginBox {
+    background-color: #333333;
     border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+        /* box-shadow: 1px 1px 5px 1px #66318D; */
 }
 
 .loginHeader{
@@ -25,8 +19,7 @@
 }
 
 .mb-3{
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 5px;
 }
 
 .btn-primary{
@@ -48,13 +41,12 @@
     font-weight: 800;
 }
 
-.signupBox{
-    position: absolute;
-    left: 50%;
-    top: 111%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+.signupBox {
     background-color: #333333;
     border-radius: 10px;
-    width: 232.8px;
+    margin-top: 1%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px 10px;
+    width: fit-content;
 }
