--- a/Suggestunes/src/app/Layouts/register-layout/register-layout.component.css
+++ b/Suggestunes/src/app/Layouts/register-layout/register-layout.component.css
@@ -1,8 +1,8 @@
 .background {
     background-color: #1E1E1E;
     position: absolute;
-    left: 0;
-    top: 0;
+    left: 0px;
+    top: 0px;
     width: 100%;
     height: 100%;
 }
