--- a/Suggestunes/src/app/login-box-component/login-box-component.component.html
+++ b/Suggestunes/src/app/login-box-component/login-box-component.component.html
@@ -1,18 +1,16 @@
-<div class="loginBox flex container">
-    <div class="bigFlex flex container">
+<div class="d-flex flex-column justify-content-center">
+    <div class="loginBox d-flex">
         <div style="padding: 20px;">
             <h3 class="loginHeader">LOGIN</h3>
-            <form class="loginForm">
+            <form #postForm="ngForm" class="loginForm" (ngSubmit)="callLogin()">
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label><br>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input type="email" class="form-control" id="email" placeholder="Email">
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label><br>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                    <input type="password" class="form-control" id="password" placeholder="Password">
                 </div>
                 <div style="text-align: center; padding-top: 10px;">
-                    <button type="submit" class="btn btn-primary">Log in</button>
+                    <button class="btn btn-primary" type="submit" >Log in</button>
                 </div>
             </form>
             <p style="padding: 10px; margin: 0;">
