--- a/Suggestunes/src/app/register-box-component/register-box-component.component.html
+++ b/Suggestunes/src/app/register-box-component/register-box-component.component.html
@@ -1,34 +1,29 @@
-<body>
-    <div class="d-flex flex-column justify-content-center">
-        <div class="loginBox d-flex ">
-            <div style="padding: 20px;">
-                <h3 class="loginHeader">Suggestunes</h3>
-                <form class="loginForm">
-                    <div class="mb-3">
-                        <input type="email" class="form-control" id="email" placeholder="Email Address"
-                            aria-describedby="emailHelp">
-                    </div>
-                    <div class="mb-3">
-                        <input type="text" class="form-control" id="username" placeholder="Username">
-                    </div>
-                    <div class="mb-3">
-                        <input type="password" class="form-control" id="password" placeholder="Password">
-                    </div>
-                    <div class="mb-3">
-                        <input type="password" class="form-control" id="confirm_password"
-                            placeholder="Confirm Password">
-                    </div>
-                    <div style="text-align: center; padding-top: 10px;">
-                        <button class="btn btn-primary" onclick={sayHello()}>Register Now!</button>
-                        <script src = "register-box-component.component.ts"> </script>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="signupBox d-flex container">
-            <p style="padding: 10px 10px; margin: 0; color: white">Already have an account?<br>
-                <a class="link" href="/signin">Log In</a>
-            </p>
+<div class="d-flex flex-column justify-content-center">
+    <div class="loginBox d-flex ">
+        <div style="padding: 20px;">
+            <h3 class="loginHeader">Suggestunes</h3>
+            <form #postForm="ngForm" class="loginForm" (ngSubmit)="callRegister()">
+                <div class="mb-3">
+                    <input type="email" class="form-control" id="email" placeholder="Email Address">
+                </div>
+                <div class="mb-3">
+                    <input type="text" class="form-control" id="username" placeholder="Username">
+                </div>
+                <div class="mb-3">
+                    <input type="password" class="form-control" id="password" placeholder="Password">
+                </div>
+                <div class="mb-3">
+                    <input type="password" class="form-control" id="confirm_password" placeholder="Confirm Password">
+                </div>
+                <div style="text-align: center; padding-top: 10px;">
+                    <button class="btn btn-primary" type="submit">Register Now!</button>
+                </div>
+            </form>
         </div>
     </div>
-</body>
+    <div class="signupBox d-flex container">
+        <p style="padding: 10px 10px; margin: 0; color: white">Already have an account?<br>
+            <a class="link" href="/signin">Log In</a>
+        </p>
+    </div>
+</div>
