--- a/Suggestunes/src/app/Layouts/account-layout/card/card.component.css
+++ b/Suggestunes/src/app/Layouts/account-layout/card/card.component.css
@@ -11,8 +11,10 @@
 }
   .card-text{
     text-align: center;
+    overflow: hidden;
   }
   .card-title{
     text-align: center;
+    overflow: hidden;
   }
   
