--- a/Suggestunes/src/app/Layouts/account-layout/account-info/account-info.component.css
+++ b/Suggestunes/src/app/Layouts/account-layout/account-info/account-info.component.css
@@ -2,5 +2,8 @@
     width: 500px;
     margin: 0 auto;
     text-align: center;
-    font-family:Arial, Helvetica, sans-serif;
+}
+
+.account-elm {
+    margin: 15px;
 }
