--- a/Suggestunes/src/app/Layouts/account-layout/account-layout.component.html
+++ b/Suggestunes/src/app/Layouts/account-layout/account-layout.component.html
@@ -1,12 +1,13 @@
 <app-nav-bar></app-nav-bar>
 <div style = "height: 100px;"></div>
-<app-account-info bio = "I like a wide variety of music and I love sharing my tastes with my friends"></app-account-info>
+<app-account-info></app-account-info>
 <div class = "playlists-component">
     <h1 style = "text-decoration: underline;">My Playlists</h1>
-    <div style = "overflow-x: scroll; max-width: 1152px; margin: 0 auto; white-space: nowrap;">
+    <div style = "overflow-x: scroll; max-width: 1152px; margin: 0 auto; white-space: nowrap">
         <div style="display: inline-block" *ngFor = "let item of cards">
             <app-card img = {{item.img}} description = {{item.description}} imgDescription={{item.imgDescription}}></app-card>
         </div>
+        <a class = "showAllButton" href = "#">Show All</a>
     </div>
 </div>
 <div class = "friends-component">
@@ -15,5 +16,6 @@
         <div *ngFor = "let product of products" style = "display: inline-block;">
                 <app-account-friends friendName = {{product.friendName}}></app-account-friends>
         </div>
+        <a class = "showAllButton" href = "#">Show All</a>
     </div>
 </div>
