--- a/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.css
+++ b/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.css
@@ -1,9 +1,14 @@
+h3 h5 {
+    font-size: 1.25rem;
+}
+
 .site-nav {
     position: absolute;
     top: 0px;
     left: 0px;
     right: 0px;
-    background-color: #66318D;
+    background-color: #3E2149;
+    padding: 15px;
 }
 
 .nav-content {
@@ -16,7 +21,6 @@
     margin-right: 20px;
     text-decoration: none;
     -webkit-font-smoothing: antialiased;
-    font-family:Arial, Helvetica, sans-serif;
     color: white;
 }
 
@@ -24,10 +28,47 @@
     -webkit-font-smoothing: antialiased;
     font-family:Arial, Helvetica, sans-serif;
     color: white;
+    font-size: 1.25rem;
 }
 
 .nav-button {
     -webkit-font-smoothing: antialiased;
     font-family:Arial, Helvetica, sans-serif;
     color: white;
+    font-size: 1rem;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.nav-button:hover {
+    background-color: #76318F;
+}
+
+.dropdown {
+    position: relative;
+    float: right;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0px;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown-content a:hover {background-color: #ddd;}
+
+body.dark .modal-content {
+	background-color: #1e2229;
 }
