--- a/Suggestunes/src/app/landing-page/stats-carousel/stats-carousel.component.html
+++ b/Suggestunes/src/app/landing-page/stats-carousel/stats-carousel.component.html
@@ -11,11 +11,9 @@
           <li class="list-group-item statItem">
             <h1>Top Songs This Week</h1>
           </li>
-          <li class="list-group-item statItem">Song 1</li>
-          <li class="list-group-item statItem">Song 2</li>
-          <li class="list-group-item statItem">Song 3</li>
-          <li class="list-group-item statItem">Song 4</li>
-          <li class="list-group-item statItem">Song 5</li>
+          <div *ngFor = "let item of getTopSongs()">
+            <li class="list-group-item statItem">{{item.name}}</li>
+          </div>
         </ul>
       </div>
     </div>
@@ -25,11 +23,9 @@
           <li class="list-group-item statItem">
             <h1>Top Genres This Week</h1>
           </li>
-          <li class="list-group-item statItem">Genre 1</li>
-          <li class="list-group-item statItem">Genre 2</li>
-          <li class="list-group-item statItem">Genre 3</li>
-          <li class="list-group-item statItem">Genre 4</li>
-          <li class="list-group-item statItem">Genre 5</li>
+          <div *ngFor = "let item of getTopGenres()">
+            <li class="list-group-item statItem">{{item.name}}</li>
+          </div>
         </ul>
       </div>
     </div>
@@ -39,11 +35,9 @@
           <li class="list-group-item statItem">
             <h1>Top Artists This Week</h1>
           </li>
-          <li class="list-group-item statItem">Artist 1</li>
-          <li class="list-group-item statItem">Artist 2</li>
-          <li class="list-group-item statItem">Artist 3</li>
-          <li class="list-group-item statItem">Artist 4</li>
-          <li class="list-group-item statItem">Artist 5</li>
+          <div *ngFor = "let item of getTopArtists()">
+            <li class="list-group-item statItem">{{item.name}}</li>
+          </div>
         </ul>
       </div>
   </div>
