created functions to create playlist objects

--- a/Suggestunes/src/app/layouts/playlist-home-layout/playlist-home-layout.component.css
+++ b/Suggestunes/src/app/layouts/playlist-home-layout/playlist-home-layout.component.css
@@ -6,7 +6,7 @@
   flex-wrap:wrap;
   background-color: #1E1E1E!important;
   color:white;
-border-color: white;
+border-color: #1e1e1e;
   width:100%;
   align-content:center;
   vertical-align: center;
