--- a/Suggestunes/src/app/layouts/playlist-home-layout/playlist-home-layout.component.html
+++ b/Suggestunes/src/app/layouts/playlist-home-layout/playlist-home-layout.component.html
@@ -1,9 +1,9 @@
 <div style="text-align: center">
 <h5 class = "fs-1" style = "justify-content: center;padding-top:1rem">Your Playlists</h5>
-  <app-create-playlist></app-create-playlist>
+  <app-create-playlist (messageEvent)="addLink($event)"></app-create-playlist>
   <div class="d-flex justify-content-center">
-    <div class="list-group list-group-flush text-md-start" >
-      <a *ngFor="let i of indexes" href="/playlists/playlist" class = "list-group-item"><img alt = "default image" src = "./assets/music note img.png"><p>Example {{i}}</p> </a>
+    <div id="container" class="list-group list-group-flush text-md-start" >
+      <span *ngIf="show"  style="border:none;"><a *ngFor="let p of playlists" href="/playlists/playlist" class = "list-group-item"> <img alt = "default image" src = "{{p.image}}"><p>{{p.name}}</p></a></span>
     </div>
   </div>
 </div>
