--- a/Suggestunes/src/app/playlists/create-playlist/create-playlist-modal/create-playlist-modal.component.html
+++ b/Suggestunes/src/app/playlists/create-playlist/create-playlist-modal/create-playlist-modal.component.html
@@ -24,7 +24,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn" (click)="clear($event)" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn">Create Playlist</button>
+        <button type="button" class="btn" (click)="submitForm($event)" data-bs-dismiss="modal">Create Playlist</button>
       </div>
     </div>
   </div>
