Signup/Login/ForgotPassword Finished

--- a/Suggestunes/src/app/Layouts/register-layout/register-box-component/register-box-component.component.html
+++ b/Suggestunes/src/app/Layouts/register-layout/register-box-component/register-box-component.component.html
@@ -22,8 +22,11 @@
         </div>
     </div>
     <div class="signupBox d-flex container">
-        <p style="padding: 10px 10px; margin: 0; color: white">Already have an account?<br>
-            <a class="link" href="/signin">Log In</a>
+        <p style="padding: 10px 0px 0px; margin: 0px; color: white">
+            <font style = "margin: 0px 30px">Already have an account?<br></font>
+            <a href="signin">
+                <button class="btn btn-secondary">Log In</button>
+            </a>
         </p>
     </div>
 </div>
