--- a/Suggestunes/src/app/Layouts/sign-in-layout/login-box-component/login-box-component.component.html
+++ b/Suggestunes/src/app/Layouts/sign-in-layout/login-box-component/login-box-component.component.html
@@ -10,7 +10,7 @@
                     <input type="password" class="form-control" id="password" placeholder="Password">
                 </div>
                 <div style="text-align: center; padding-top: 10px;">
-                    <button class="btn btn-primary" type="submit" >Log in</button>
+                    <button class="btn btn-primary" type="submit">Log in</button>
                 </div>
             </form>
             <p style="padding: 10px; margin: 0;">
@@ -19,8 +19,11 @@
         </div>
     </div>
     <div class="signupBox flex container">
-        <p style="padding: 10px 30px; margin: 0; color: white;">Don't have an account?<br>
-            <a class="link" href="register">Sign up</a>
+        <p style="padding: 10px 0px 0px; margin: 0; color: white;">
+            <font style = "margin: 0px 40px">Don't have an account?<br></font>
+            <a href="register">
+                <button class="btn btn-secondary">Sign up</button>
+            </a>
         </p>
     </div>
 </div>
