--- a/Suggestunes/src/app/Layouts/sign-in-layout/login-box-component/login-box-component.component.css
+++ b/Suggestunes/src/app/Layouts/sign-in-layout/login-box-component/login-box-component.component.css
@@ -47,6 +47,15 @@
     margin-top: 1%;
     margin-left: auto;
     margin-right: auto;
-    padding: 0px 10px;
+    padding: 0px;
     width: fit-content;
+}
+
+.btn-secondary{
+    text-align: center; 
+    margin-top: 10px;
+    padding: 5px 30px;
+    width: 100%;
+    border-radius: 0px 0px 10px 10px;
+    vertical-align: center;
 }
