--- a/Suggestunes/src/app/Layouts/account-layout/account-layout.component.html
+++ b/Suggestunes/src/app/Layouts/account-layout/account-layout.component.html
@@ -19,3 +19,6 @@
         <a class = "showAllButton" href = "#">Show All</a>
     </div>
 </div>
+<div class="spotify-component">
+    <button (click)="spotifyAuth()">Link your Spotify</button>
+</div>
