Added nav bar to the playlist page

--- a/Suggestunes/src/app/playlists/playlist/playlist.component.html
+++ b/Suggestunes/src/app/playlists/playlist/playlist.component.html
@@ -1,3 +1,4 @@
+<app-nav-bar></app-nav-bar>
 <div *ngIf="show"> <div class="header container-fluid">
     <img alt = "" src="{{playlist!.image}}" class="music-img rounded float-start">
     <div class="title container">
