--- a/Suggestunes/src/app/playlist/playlist.component.html
+++ b/Suggestunes/src/app/playlist/playlist.component.html
@@ -1,3 +1,4 @@
+<app-nav-bar></app-nav-bar>
 <div class="header container-fluid">
     <img alt = "" src="assets/music note img.png" class="music-img rounded float-start">
     <div class="title container">
