--- a/Suggestunes/src/app/Layouts/account-layout/account-layout.component.html
+++ b/Suggestunes/src/app/Layouts/account-layout/account-layout.component.html
@@ -7,7 +7,7 @@
         <div style="display: inline-block" *ngFor = "let item of cards">
             <app-card img = {{item.img}} description = {{item.description}} imgDescription={{item.imgDescription}}></app-card>
         </div>
-        <a class = "showAllButton" href = "#">Show All</a>
+        <a class = "showAllButton" href = "playlists">Show All</a>
     </div>
 </div>
 <div class = "friends-component">
