--- a/Suggestunes/src/styles.css
+++ b/Suggestunes/src/styles.css
@@ -1,7 +1,7 @@
 @import "~bootstrap/dist/css/bootstrap.css";
-@import url('https://fonts.cdnfonts.com/css/uni-sans-regular');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 body{
   background-color: #1E1E1E;
   color: white!important;
-  font-family: 'Uni Sans Demo', sans-serif;
+  font-family: 'JetBrains Mono', Jetbrains;
 }
