added spotify link button to playlist home page, stylized it, and justified content between navbar components

--- a/Suggestunes/src/app/layouts/playlist-home-layout/playlist-home-layout.component.html
+++ b/Suggestunes/src/app/layouts/playlist-home-layout/playlist-home-layout.component.html
@@ -16,4 +16,7 @@
   </div>
   </div>
   </span>
+  <span *ngIf="!has_spotify">
+    <button (click)="this.spotify.spotifyAuth()" class="btn">Link your Spotify</button>
+  </span>
 </div>
