--- a/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.html
+++ b/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.html
@@ -1,11 +1,14 @@
 <div class = "site-nav">
-  <div class = "nav-content">
+  <div class = "nav-content d-flex justify-content-between">
+    <span>
       <a class = "nav-item" href = "#"><h3 class = "logo">Suggestunes</h3></a>
       <div class = "nav-item" style = "width: 10px;"></div>
+    </span>
       <a class = "nav-item" href = "#"><h5 class = "nav-button">Songs</h5></a>
       <a class = "nav-item" href = "/playlists"><h5 class = "nav-button">Playlists</h5></a>
       <a class = "nav-item" href = "#"><h5 class = "nav-button">Discover</h5></a>
       <a class = "nav-item" href = "#"><h5 class = "nav-button">People</h5></a>
+    <span>
       <div class = "dropdown nav-item">
         <a class = "nav-item"><img src = "https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" style="border-radius: 50%;" height = "32px" width = "32px"></a>
         <div class = dropdown-content>
@@ -15,7 +18,7 @@
           <a (click) = (callLogout())>Logout</a>
         </div>
       </div>
-      <h5 class = "nav-item" style = "float: right; font-size: 1rem; margin-top: 5px;">{{username}}</h5>
+      <h5 class = "nav-item" style = "float: right; font-size: 1rem; margin-top: 5px;">{{username}}</h5></span>
   </div>
 </div>
 
