--- a/Suggestunes/src/app/playlists/playlist/playlist.component.html
+++ b/Suggestunes/src/app/playlists/playlist/playlist.component.html
@@ -1,5 +1,5 @@
 <app-nav-bar></app-nav-bar>
-<div *ngIf="show"> 
+<div *ngIf="show">
     <div class="header container-fluid">
         <img alt = "" src="{{playlist!.image}}" class="music-img rounded float-start">
         <div class="title container">
@@ -7,13 +7,26 @@
             <h2 class="playlist-description">{{playlist!.description}}</h2></div>
         </div>
     </div>
+  <button *ngIf="has_active_device"(click) = "play('')">play some jams</button>
+  <br>
+  <div class="list-group list-group-flush text-md-start">
+    <button *ngFor="let item of this.playlist!.songs!" class = "list-group-item" (click)="play(item.uri!)">
+      <img class = "track-img" alt = "default image" src = "{{item.image!}}">
+      <p>
+        <span class = "top">{{item.name!}} <br>
+      </span>
+
+      <span class="bottom">{{item.artist!}}</span>
+    </p>
+    </button>
+  </div>
     <div class="body container-fluid">
         <div class="mb-3">
             <form class="form-label" #songForm="ngForm" (ngSubmit)="search(songForm)" >Add Songs
                 <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Song Title" ngModel name="track">
                 <button type="submit" class="search button">
                     Search
-                </button> 
+                </button>
             </form>
          </div>
     </div>
@@ -23,6 +36,6 @@
     <app-edit-playlist-modal [target_playlist] = "playlist"></app-edit-playlist-modal>
     <div class="mb-3">
         <label for="formGroupExampleInput" class="form-label">Add Songs</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Search">
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Search">
       </div>
 </div>
