--- a/Suggestunes/src/app/playlists/playlist/playlist.component.css
+++ b/Suggestunes/src/app/playlists/playlist/playlist.component.css
@@ -1,9 +1,52 @@
+.list-group-flush{
+  width:90%;
+  margin-left: 5%;
+  margin-right: 5%
+}
+.list-group-item{
+  display:flex;
+  flex-wrap:wrap;
+  background-color: #1E1E1E!important;
+  color:white;
+  border-color: #1e1e1e;
+  width:100%;
+  align-content:center;
+  vertical-align: center;
+  height: 5em;
+}
+/*p{*/
+/*  display:block;*/
+/*  margin-top: auto;*/
+/*  margin-bottom: auto;*/
+/*}*/
+.list-group-item:hover{
+  background-color: #333333!important;
+  -webkit-box-shadow: inset 0 0 .75em .75em #1E1E1E;
+}
+.track-img{
+  height: 75%;
+  margin-right: 10px;
+  border-radius: 15%;
+}
+
+a{
+  height: 5em;
+}
+
+
+
+.top{
+  font-size: 14px
+}
+.bottom{
+  font-size: 10px;
+}
+
 .header.container-fluid
 {
 margin-top: 100px;
 padding: 0;
 z-index: 0;
-position: absolute;
 height: 300px;
 background-color: #1E1E1E!important;
 }
@@ -25,8 +68,8 @@ transition-duration: .2s;
 z-index: 1;
 width: 100%;
 height: 200px;
-padding: 0;
 margin-right: 200px;
+  padding-top: 60px;
 margin-top: 75px;
 }
 .playlist-title
@@ -42,7 +85,7 @@ line-height: 28.8px;
 z-index: 3;
 width: 100%;
 height: 100px;
-text-align: center; 
+text-align: center;
 }
 .playlist-description
 {
@@ -102,7 +145,7 @@ border-width: 2px;
     margin-top: 15px;
     background-color:  #66318D;
     display:block;
-    color:white; 
+    color:white;
     border-radius: 4px;
     border: none;
     font-size: 17px;
@@ -112,4 +155,10 @@ border-width: 2px;
 }
 .search.button:active{
     background-color: #3e1d54;
+}
+p{
+  display: block;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  text-align: start;
 }
