made it so you cannot edit spotify playlists

--- a/Suggestunes/src/app/playlists/playlist/playlist.component.css
+++ b/Suggestunes/src/app/playlists/playlist/playlist.component.css
@@ -104,8 +104,7 @@ text-align: center;
 }
 .body.container-fluid
 {
-padding-top: 400px;
-height: 1100px;
+height: fit-content;
 background-color: #1E1E1E!important;
 
 }
